--- a/demos/animatejs.html
+++ b/demos/animatejs.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<title>动画</title>
+<title>css3动画组件</title>
 <link rel="stylesheet" type="text/css" href="../src/css/base.css" />
 <link rel="stylesheet" type="text/css" href="../src/css/animate.css" />
 <link rel="stylesheet" type="text/css" href="animatejs.css" />
@@ -17,7 +17,7 @@
 <script>
 require(['zepto', 'animatejs'], function(){
     var Animatejs = require('animatejs');
-	new Animatejs('animatejs',[])
+	new Animatejs('animatejs',[]);
 });
 require.config({
     paths: {
