引入mini版dom操作

--- a/demos/animatejs.html
+++ b/demos/animatejs.html
@@ -11,17 +11,19 @@
 <link rel="stylesheet" type="text/css" href="animatejs.css" />
 <script src="../src/jslib/require.js"></script>
 </head>
-<body class="dn">
-<section id="animatejs" class="animatejs">1</section>
-<section class="animatejs gaga">2</section>
+<body>
+<section id="animatejs" class="animatejs">11111111111111111111111111111</section>
+<section class="animatejs gaga">2222222222222222222</section>
 <script>
-require(['zepto', 'animatejs'], function(){
+require(['animatejs'], function(){
     var Animatejs = require('animatejs');
-	new Animatejs('animatejs',[]);
+	new Animatejs([
+        ['.gaga', 'bounceInDown', 1.6],
+        ['#animatejs', 'bounceInDown', 1.7]
+    ]);
 });
 require.config({
     paths: {
-        "zepto": "../src/jslib/zepto.min",
         "animatejs": "../build/animatejs"
     }
 });
